--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/adapter-better-sqlite3": "^7.4.0",
-    "@prisma/client": "^7.4.0",
+    "@prisma/adapter-better-sqlite3": "^7.4.1",
+    "@prisma/client": "^7.4.1",
     "axios": "^1.13.2",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
@@ -25,6 +26,6 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.2.3",
     "dotenv": "^17.3.1",
-    "prisma": "^7.4.0"
+    "prisma": "^7.4.1"
   }
 }
